<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="author" translatable="false">BlueBright</string>
    <string name="app_name">MyExperiment</string>
    <string name="app_build_type">Build in normal mode</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="string_button_check_gps">Check GPS</string>
    <string name="string_button_toggle_wifi">Toggle Wi-Fi</string>
    <string name="string_button_check_file_list">Check how many file in "Download" folder</string>
    <string name="string_gps_enabled">GPS enabled!</string>
    <string name="string_current_gps_state">Current GPS state : </string>
    <string name="string_current_gps_state2">Current GPS state : %1$b</string>
    <string name="string_print_number_of_file_list">%1$d file(s) in list</string>

    <string name="location_permission_denied_message">If you reject permission, you can not use location service\n\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="string_permission_denied">Permission denied!</string>
    <string name="wifi_permission_denied_message">If you reject permission, you can not use Wi-Fi service\n\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="storage_permission_denied_message">If you reject permission, you can not use storage service\n\nPlease turn on permissions at [Setting] > [Permission]</string>

    <string name="btn_launch_child_activity">Show Child Activity</string>
    <string name="btn_launch_edit_text_activity">Show EditText Activity</string>


    <!--Base Activity-->
    <string name="msg_app_exit_click_one_time_more">Click one time more to close app</string>


    <!--Child Activity-->
    <string name="title_activity_child">Child Activity</string>

    <!-- EditText Activity -->
    <string name="title_activity_edit">EditText Activity</string>
    <string name="string_title_edit_1">Just Edit Text</string>
    <string name="hint_text">Ex) Text input</string>
    <string name="string_title_edit_2">Input Hexadecimal</string>
    <string name="hint_hexadecimal">Ex) ac0A4D</string>


    <!--Common-->
    <string name="string_common_wifi">Wi-Fi</string>
    <string name="string_common_bluetooth">Bluetooth</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_sample_dummy">Dummy</string>

    <string name="error_unknown_occur">Unknown error occur</string>

</resources>
