<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="androidx.databinding.ObservableArrayList" />

        <import type="kr.co.bluebright.www.myexperiment.custom_wifi.item.CustomWifiItem" />

        <import type="kr.co.bluebright.www.myexperiment.custom_bluetooth.item.CustomBluetoothItem" />

        <variable
            name="custom_item_list"
            type="androidx.databinding.ObservableArrayList" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_horizontal_top_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />


        <Button
            android:id="@+id/btn_add_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_common_wifi"
            app:layout_constraintBottom_toBottomOf="@+id/guide_horizontal_top_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_add_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_common_bluetooth"
            app:layout_constraintBottom_toBottomOf="@+id/guide_horizontal_top_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_app_build_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_build_type"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/guide_horizontal_top_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_custom_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guide_horizontal_top_header"
            bind:item="@{custom_item_list}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>